# internal/laboratorium/model_pa.go
@@ -1,0 +1,9 @@
+package laboratorium
+
+type HasilLabPA struct {
+	DiagnosaKlinik string `json:"diagnosa_klinik"`
+	Makroskopis    string `json:"makroskopis"`
+	Mikroskopis    string `json:"mikroskopis"`
+	Kesimpulan     string `json:"kesimpulan"`
+	Kesan          string `json:"kesan"`
+}
